white space fixing

--- a/cssstyles/styles.css
+++ b/cssstyles/styles.css
@@ -193,6 +193,7 @@ footer p{
         /* width: 100%; */
         display:flex;
         flex-direction: column;
+        align-items: center;
     }
 
     .item-container img{
@@ -233,10 +234,19 @@ footer p{
     .blogs-container{
         
         width: 100%;
-        display: grid;
+        /* display: grid;
         grid-template-columns: repeat(1, 1fr);
-        margin-bottom: 60px;
+        margin-bottom: 60px; */
+                                    display: flex;
+                                    flex-direction: column;
+                                    align-items: center;
     }
+/* 
+                .blogs{
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center; }*/
+    
         /* blog ends here ------------- */
 
 
@@ -323,6 +333,8 @@ footer p{
         display: grid;
         grid-template-columns: repeat(2, 1fr);   /* change here  */
         margin-bottom: 60px;
+        justify-items: center;     /* change here  */
+        
     }
 
     /* blog ends here ------------- */
